--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -38,6 +38,8 @@
             <td>niebieska</td>
         </tr>
     </table><br>
-    <input type="text">
+    <input type="text" id="name" name="name" required><br>
+    <input type="checkbox" name="newsletter" value="yes"><br>
+    <input type="submit" value="waslij">
 </body>
 </html>
